--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -48,13 +48,12 @@ jobs:
       - name: Read destroy configuration
         id: read-destroy-config
         run: |
-          # Lê o arquivo JSON e define a variável de saída 'destroy'
           DESTROY=$(jq -r '.["${{ inputs.environment }}"]' ./destroy_config.json)
           echo "destroy=$DESTROY" >> $GITHUB_OUTPUT    
 
       - name: Terraform Init
         run: |
-          set -e # Para falhar rapidamente em caso de erro
+          set -e
           terraform init \
             -backend-config="bucket=${{ inputs.aws-statefile-s3-bucket }}" \
             -backend-config="key=${{ github.event.repository.name }}" \
@@ -63,7 +62,7 @@ jobs:
 
       - name: Terraform Validate
         run: |
-          set -e # Para falhar rapidamente em caso de erro
+          set -e
           terraform validate
 
       - name: Terraform Destroy 
@@ -78,18 +77,15 @@ jobs:
         id: terraform-plan
         run: |
           terraform workspace select ${{ inputs.environment }} || terraform workspace new ${{ inputs.environment }}
-          terraform plan -var-file="./envs/${{ inputs.environment }}/terraform.tfvars" -auto-approve
+          terraform plan -var-file="./envs/${{ inputs.environment }}/terraform.tfvars"
 
       - name: Terraform Apply
         if: steps.read-destroy-config.outputs.destroy != 'true'
         id: terraform-apply
         run: |
-          # Ativando o log de depuração do Terraform
           export TF_LOG=DEBUG
           export TF_LOG_PATH=terraform.log
 
-          # Executa o apply e verifica o status
-          terraform apply -auto-approve || { echo "Terraform apply failed. Check terraform.log for details."; exit 1; }
+          terraform apply -var-file="./envs/${{ inputs.environment }}/terraform.tfvars" -auto-approve || { echo "Terraform apply failed. Check terraform.log for details."; exit 1; }
 
-          # Se o apply for bem-sucedido, opcionalmente, você pode desativar o log
           unset TF_LOG
